Thu Apr 27 18:37:50 BST 2006  Olly Betts <olly@survex.com>

	* scriptindex.cc: Use const reference instead of just a reference.

Sun Apr 23 18:32:20 BST 2006  Olly Betts <olly@survex.com>

	* scriptindex.cc: Fix "index" and "indexnopos" without a prefix to
	  set the weight correctly (bug introduced in 0.9.5).

Wed Apr 19 13:37:15 BST 2006  Fabrice Colin

	* omega.spec.in: Create and package /var/lib/omega/cdb and
	  /var/log/omega.

Tue Apr 11 19:29:34 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac,htmlparse.cc,query.cc,scriptindex.cc: Disable MSVC
	  warning 4800 (on int to bool conversions) in config.h and then we
	  can remove the "fixes" elsewhere.

Mon Apr 10 16:26:08 BST 2006  Olly Betts <olly@survex.com>

	* date.cc,hashterm.cc,htmlparse.cc,omega.cc,omindex.cc,query.cc,
	  scriptindex.cc: Fix MSVC7 warnings.

Sat Apr 08 20:04:33 BST 2006  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 0.9.5.

Fri Apr 07 16:45:36 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc,query.cc: Tweak for MSVC compilation.

Fri Apr 07 03:23:22 BST 2006  Olly Betts <olly@survex.com>

	* omega.spec.in: Man pages may be gzipped.

Thu Apr 06 14:28:08 BST 2006  Olly Betts <olly@survex.com>

	* README: Add pointer to documentation.

Thu Apr 06 03:32:21 BST 2006  Olly Betts <olly@survex.com>

	* omega.spec.in: Include man pages in RPM.

Thu Apr 06 03:06:56 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,commonhelp.cc,commonhelp.h,configure.ac,omindex.cc,
	  scriptindex.cc: Add man pages for omindex and scriptindex.

Thu Apr 06 02:56:09 BST 2006  Olly Betts <olly@survex.com>

	* mbox2omega.script: Use new "hash" command.

Wed Apr 05 19:29:14 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,docs/scriptindex.txt,hashterm.cc,hashterm.h,
	  omindex.cc,scriptindex.cc: Add new "hash" command to allow hashed
	  terms to be generated from long URLs like omindex does.
	* htdig2omega.script: Use new "hash" command.